# hackathone-2-TODO-APP

./: .gitignore  COMPLETE_FIX_INSTRUCTIONS.md  DEPLOYMENT.md  FIXED_AND_READY.md  INTEGRATION_GUIDE.md  KUBERNETES.md  QUICK_START.md  README.md  START_APP.bat  START_INSTRUCTIONS.md  STATUS_REPORT.md  gemini-nextjs-toolkit.skill  pyproject.toml
.claude/: settings.local.json
backend/: .env  .env.backup  Dockerfile  app.db  database.py  fix_user_id_column.py  init_auth_tables.py  main.py  models.py  quick_fix_db.py  render.yaml  requirements.txt  security.py  wake_db.py
backend/agent/: mcp_tools.py  todo_agent.py
frontend/: .dockerignore  .env.example  better-auth.config.ts  package-lock.json  package.json  test-db-connection.js  test-neon.js  vercel.json
frontend/scripts/: create-auth-tables.js  init-db.js  init-db.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatBubble.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts  chat-api.ts
gemini-nextjs-toolkit/: SKILL.md
gemini-nextjs-toolkit/assets/nextjs-template/: package.json
helm/qtodo/: Chart.yaml  values.yaml
helm/qtodo/templates/: _helpers.tpl  ingress.yaml  namespace.yaml
phase-1/: CLAUDE.md  README.md
phase-1/reference-specs/: constitution.md  implement.md  plan.md  spcecify.md  tasks.md
phase-1/specs history/: Constitution.md  implement.md  plan.md  specify.md  tasks.md
phase-1/src/: main.py  todo.py
phase-1/tests/: test_todo.py
phase-2/: PHASE4_PLAN.md  README.md  docker-compose.yml
phase-2/backend/: .dockerignore  .env.example  .gitignore  complete_setup.py  database.py  main.py  quick_fix.sql  schemas.py
phase-2/backend/agent/: __init__.py  todo_agent.py
phase-2/frontend/: .gitignore  Dockerfile  next.config.ts  test-db.mjs  test-neon.js
phase-2/scripts/: deploy.ps1
phase-3/: IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
phase-3/.claude/: settings.local.json
phase-3/backend/: .env.example  .gitignore  alembic.ini  list_groq_models.py  list_models.py  requirements.txt
phase-3/backend/alembic/: env.py
phase-3/backend/alembic/versions/: 001_initial_tables.py
phase-3/backend/app/: config.py  database.py  main.py
phase-3/backend/app/agent/: __init__.py  todo_agent.py
phase-3/backend/app/api/: chat.py
phase-3/backend/app/crud/: __init__.py  conversation.py  message.py  task.py
phase-3/backend/app/models/: __init__.py  conversation.py  message.py  task.py
phase-3/backend/app/schemas/: __init__.py  chat.py  message.py  task.py
phase-3/backend/mcp_server/: __init__.py  server.py
phase-3/frontend/: package-lock.json  package.json
phase-3/frontend/src/app/: globals.css  layout.tsx  page.tsx
phase-3/frontend/src/components/: ChatInterface.tsx  MessageInput.tsx  MessageList.tsx  TaskList.tsx
phase-3/frontend/src/lib/: api.ts
scripts/: cleanup.ps1  cleanup.sh  deploy.sh
skills/: minikube.skill  openai-chatkit.skill
skills/docker/: SKILL.md
skills/docker/assets/: .dockerignore  docker-compose.yml  fastapi.Dockerfile  node.Dockerfile  python.Dockerfile
skills/docker/references/: best-practices.md  compose.md  dockerfile.md  networking.md  volumes.md
skills/docker/scripts/: create_compose.py  create_dockerfile.py  setup_docker.py
skills/fastapi/: SKILL.md  fastapi.skill
skills/fastapi/assets/: .env.example  Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt
skills/fastapi/examples/: .env.example  README.md
skills/fastapi/references/: best-practices.md  database-patterns.md
skills/fastapi/scripts/: add_auth.py  generate_crud.py  package_fastapi.py  scaffold_project.py
skills/mcp-sdk/: SKILL.md
skills/minikube/: SKILL.md
skills/neon-postgres/: SKILL.md
skills/nextjs/: SKILL.md
skills/openai-agents-sdk/: SKILL.md
skills/openai-chatkit/: SKILL.md
skills/python/: SKILL.md
skills/python/assets/: .gitignore  .pre-commit-config.yaml  Dockerfile  github-workflow.yml  pyproject.toml
skills/speckitplus/: SKILL.md
skills/sqlmodel/: SKILL.md
specs/001-todo-fullstack-app/: spec.md
(+116 files in other folders)
